k3s-vbox/important-scripts/apache-test/apache-deployment.yaml
#Deployment
#apache 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apachedep
  labels:
    app: apache-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-app1
  template:
    metadata:
      labels:
        app: apache-app1
    spec:
      #hostname: fred
      containers:
      - name: apache-container
        image: httpd:2.4.48
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
