k3s-vbox/important-scripts/apache-test/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
#  type: NodePort
  selector:
    app: apache-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#      nodePort: 30036
