k3s-vbox/important-scripts/apache-test/apache-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
#apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apacheingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port: 
              number: 80
      - path: "/v2"
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
