k3s-vbox/important-scripts/apache-test/k1.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: ml-app
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: apache-app3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apache-app1
  name: apachedep
  namespace: ml-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-app3
  template:
    metadata:
      labels:
        app: apache-app3
    spec:
      containers:
      - image: httpd:2.4.48
        name: apache-container
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: apacheingress
  namespace: ml-app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: apache-service
            port:
              number: 8889
        path: /
        pathType: Prefix
      - backend:
          service:
            name: apache-service
            port:
              number: 8888
        path: /v2
        pathType: Prefix
