k3s-vbox/important-scripts/apache-test/kustom_apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: ml-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apache-app
  name: apache
  namespace: ml-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
      - image: httpd:2.4.48
        name: apache-container
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: apacheingress
  namespace: ml-app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: apache-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: apache-service
            port:
              number: 80
        path: /v2
        pathType: Prefix
